--- a/content/scattering.tex
+++ b/content/scattering.tex
@@ -1,6 +1,9 @@
 \chapter{Scattering}
 \label{chap:scattering}
 
+
+\jtd{Talk about conserved properties other than momentum. Add this in as a section to spin 1/2 and 1.}
+
 This part is devoted to understanding $n$-point correlation functions, which are the output of QFT predictions. These functions have two major uses: one is to compute scattering cross-sections and decay probabilities (this chapter) while another is to compute the spectrum of a quantum particle (chapter \ref{chap:spectrum}). In these two chapters we will introduce important tools, but save actual predictions for later parts, where we introduce new Lagrangians and use them to compute the $n$-point correlation functions.
 
 \section{\texorpdfstring{$S$}{S} Matrix and Scattering Amplitudes}
