--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 
 % I think I need to go back through and better clarify what the difference is between operators in the npcfs and numbers in the path integral. How do anti particles and incoming vs outgoing particles manifest themselves in both?
 
-\usepackage[paperwidth=6in, paperheight=9in, top=0.8in, bottom=0.8in, left=0.6in, right=0.6in]{geometry}
+\usepackage[paperwidth=6in, paperheight=9in, top=0.9in, bottom=1in, left=0.7in, right=0.7in]{geometry}
 \usepackage[compat=1.1.0]{tikz-feynman}
 \usepackage{imakeidx} % Index
 \usepackage{amsmath}
@@ -141,10 +141,16 @@
 \input{content/uv-divergences.tex}
 \input{content/qed-effects.tex}
 
-\part{Non-Abelian Theories}
+\part{Electroweak Theory \& the Higgs Mechanism}
 \input{content/yang-mills.tex}
 \input{content/electroweak.tex}
 \input{content/standard-model.tex}
+
+\part{Strong Theory \& The Standard Model}
+\input{content/yang-mills.tex}
+\input{content/electroweak.tex}
+\input{content/standard-model.tex}
+
 
 \part{Review}
 \input{content/sr.tex}
